# rss-digest-mcp

./: LICENSE  README.md  constraints-winarm64.txt  pyproject.toml
src/rss_digest_mcp/: __init__.py  __main__.py  core.py  server.py
tests/: test_core.py
