[project]
name = "rss-digest-mcp"
version = "0.1.0"
description = "A stateless RSS competitive-intelligence digest MCP server — keyword-filtered, deduped, recency-sorted. No database, no API keys, no login."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tefunamu" }]
keywords = ["mcp", "model-context-protocol", "rss", "atom", "feed", "digest", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.2.0",
    "feedparser>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/tefunamu/rss-digest-mcp"
Repository = "https://github.com/tefunamu/rss-digest-mcp"

[project.scripts]
rss-digest-mcp = "rss_digest_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rss_digest_mcp"]
